--- a/Workshop 9/ConvertertoMiles.kv
+++ b/Workshop 9/ConvertertoMiles.kv
@@ -3,25 +3,27 @@ BoxLayout
     BoxLayout
         orientation: 'horizontal'
         TextInput
-            id: input_name
+            id: input_miles
             text: ''
             font_size: 60
+
         BoxLayout
             orientation: 'vertical'
             size_hint_x: 0.5
             Button:
                 text: 'Up'
                 font_size: 40
-                on_press: app.handle_clear()
+                on_press: app.increment(1)
             Button:
                 text: 'Down'
                 font_size: 40
-                on_press: app.handle_clear()
+                on_press: app.increment(-1)
     Button:
         text: 'Convert m to km'
         font_size: 40
-        on_press: app.handle_clear()
+        on_press: app.calculate_conversion()
 
     Label:
         id: output_label
+        font_size: 40
         color: (1,1,0,1)
